src/core/status/ui/snapshots/clikd__core__status__ui__draw_blocks__tests__draw_blocks_whole_layout_help_panel.snap
---
source: src/core/status/ui/draw_blocks.rs
expression: setup.terminal.backend()
---
"    name          state       status      cpu      memory/limit          id         image     ↓ rx      ↑ tx                                  ( h ) exit help   "
"╭ Containers 1/3 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮╭──────────────╮"
"│⚪ container_1   ✓ running   Up 1 hour   03.00%   30.00 kB / 30.00 kB          1   image_1   0.00 kB   0.00 kB                                ││▶ pause       │" Hidden by multi-width symbols: [(2, " ")]
"│   container_2   ✓ running   Up 2 ho╭ 0.00.000 ──────────────────────────────────────────────────────────────────────────╮                    ││  restart     │"
"│   container_3   ✓ running   Up 3 ho│                                                                                    │                    ││  stop        │"
"│                                    │                                  ____ _ _ _       _                                │                    ││  delete      │"
"│                                    │                                 / ___| (_) | ____| |                               │                    ││              │"
"╰────────────────────────────────────│                                | |   | | | |/ / _` |                               │────────────────────╯╰──────────────╯"
"╭ Logs 3/3 - container_1 - image_1 ──│                                | |___| | |   < (_| |                               │────────────────────────────────────╮"
"│  line 1                            │                                 \____|_|_|_|\_\__,_|                               │                                    │"
"│  line 2                            │                                                                                    │                                    │"
"│▶ line 3                            │                 Local development environment management for Clikd                 │                                    │"
"│                                    │                                                                                    │                                    │"
"│                                    │ ( tab ) or ( shift+tab ) change panels                                             │                                    │"
"│                                    │ ( ↑ ↓ ) or ( j k ) or ( Home End ) scroll vertically                               │                                    │"
"│                                    │ ( ← → ) horizontal scroll across logs                                              │                                    │"
"│                                    │ ( ctrl ) increase scroll speed, used in conjunction scroll keys                    │                                    │"
"│                                    │ ( enter ) send docker container command                                            │                                    │"
"│                                    │ ( e ) exec into a container                                                        │                                    │"
"│                                    │ ( f ) force clear the screen & redraw the gui                                      │                                    │"
"│                                    │ ( h ) toggle this help information - or click heading                              │                                    │"
"│                                    │ ( s ) save logs to file                                                            │                                    │"
"│                                    │ ( m ) toggle mouse capture - if disabled, text on screen can be selected & copied  │                                    │"
"│                                    │ ( F1 ) or ( / ) enter filter mode                                                  │                                    │"
"│                                    │ ( # ) enter log search mode                                                        │                                    │"
"│                                    │ ( 0 ) stop sort                                                                    │                                    │"
"│                                    │ ( 1 - 9 ) sort by header - or click header                                         │                                    │"
"│                                    │ ( - = ) change log section height                                                  │                                    │"
"│                                    │ ( \ ) toggle log section visibility                                                │                                    │"
"╰────────────────────────────────────│ ( esc ) close dialog                                                               │────────────────────────────────────╯"
"╭───────────────────────── cpu 03.00%│ ( q ) quit at any time                                                             │──────╮╭────────── ports ───────────╮"
"│10.00%│       ••                    │                                                                                    │      ││       ip   private   public│"
"│      │      • •                    │         currently an early work in progress, all and any input appreciated         │      ││               8001         │"
"│      │    ••  •                    │                          https://github.com/clikd-inc/cli                          │      ││127.0.0.1      8003     8003│"
"│      │   •    •                    │                                                                                    │      ││                            │"
"│      │ ••      • •                 │                                                                                    │      ││                            │"
"│      │•        ••                  ╰────────────────────────────────────────────────────────────────────────────────────╯      ││                            │"
"│      │•        •                                              ││         │•       •                                            ││                            │"
"│      │                                                        ││         │                                                     ││                            │"
"╰───────────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────────────────────╯╰────────────────────────────╯"
